Can't screenshot fullscreen games (X11)
Affected version
OS: Arch Linux (latest as of 2020.10.07)
Mutter: 3.38.1
Session: X11
Bug summary
When I screenshot (by pressing PrintScreen button) pretty much any game (non-game applications like Chromium or VLC don't have this issue) that renders in fullscreen (Vulkan or OpenGL), screenshots always come out completely blank and transparent.
Steps to reproduce
What happened
Mutter/Gnome failed to make a proper screenshot and produced empty image for Gnome Screenshot utility.
What did you expect to happen
To produce an accurate screenshot of the game.
Relevant logs, screenshots, screencasts etc.
Let me know if I need to produce any logs and how.
Edited by Alexandr Oleynikov